--- a/pages/components/layout.html
+++ b/pages/components/layout.html
@@ -41,20 +41,25 @@
 		      <li class="nav-item">
 		        <a class="nav-link text-white" href="#">Brands</a>
 		      </li>
+
+              {% if user.is_authenticated %}
 		      <li class="nav-item">
 		        <a class="nav-link text-white" href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart (<span class="cart-list">{{request.session.cartdata|length}}</span>)</a>
 		      </li>
-		      <li class="nav-item dropdown">
+              {% endif %}
+
+              <li class="nav-item dropdown">
 		        <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          <i class="fa fa-user"></i> My Account
 		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 		        {% if user.is_authenticated %}
-		        	<a class="dropdown-item" href="#">Dashboard</a>
-		        	<a class="dropdown-item" href="#">Logout</a>
+		        	<a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+		        	<a class="dropdown-item" href="{% url 'signout' %}">Logout</a>
 	        	{% else %}
-	        		<a class="dropdown-item" href="#">Login</a>
-		          <a class="dropdown-item" href="#">Signup</a>
+	        		<a class="dropdown-item" href="{% url 'signin' %}">Login</a>
+		          <a class="dropdown-item" href="{% url 'signup' %}">Signup</a>
 		        {% endif %}
 		        </div>
 		      </li>
